# probe

./: README.md
caffe/caffe_env_test_xor_net/: CMakeLists.txt  README.md  model.prototxt  solver.prototxt
caffe/caffe_env_test_xor_net/cmake/: FindCAFFE.cmake
caffe/caffe_env_test_xor_net/src/: test.cc  train.cc
libtorch/libtorch_test_xor_net/: .gitignore  CMakeLists.txt  xor_infer.cc
libtorch/libtorch_test_xor_net/py/: net_train.py
